--- a/src/components/_car-park.html
+++ b/src/components/_car-park.html
@@ -1,4 +1,4 @@
-<section data-modal="#attractionsModal" class="car-park">
+<section class="car-park">
     <div class="car-park__container container">
         <div class="car-park__head">
             <span class="car-park__heading h h_1">Парк автомобилей</span>
