--- a/src/components/_hero.html
+++ b/src/components/_hero.html
@@ -66,43 +66,44 @@
                     </a>
                 </li>
             </ul>
-            <button
-                data-anchor=".choose"
-                data-anchor-offset="160%"
-                type="button"
-                class="hero__anchor icon icon_white"
-            >
-                <svg
-                    width="22"
-                    height="22"
-                    viewBox="0 0 22 22"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                >
-                    <path
-                        d="M11 1L11 20.1667M11 20.1667L21 10.1667M11 20.1667L1 10.1667"
-                        stroke="white"
-                        stroke-width="2"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                    />
-                </svg>
-                <svg
-                    width="22"
-                    height="22"
-                    viewBox="0 0 22 22"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                >
-                    <path
-                        d="M11 1L11 20.1667M11 20.1667L21 10.1667M11 20.1667L1 10.1667"
-                        stroke="white"
-                        stroke-width="2"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                    />
-                </svg>
-            </button>
+
+            <!--            <button-->
+            <!--                data-anchor=".choose"-->
+            <!--                data-anchor-offset="160%"-->
+            <!--                type="button"-->
+            <!--                class="hero__anchor icon icon_white"-->
+            <!--            >-->
+            <!--                <svg-->
+            <!--                    width="22"-->
+            <!--                    height="22"-->
+            <!--                    viewBox="0 0 22 22"-->
+            <!--                    fill="none"-->
+            <!--                    xmlns="http://www.w3.org/2000/svg"-->
+            <!--                >-->
+            <!--                    <path-->
+            <!--                        d="M11 1L11 20.1667M11 20.1667L21 10.1667M11 20.1667L1 10.1667"-->
+            <!--                        stroke="white"-->
+            <!--                        stroke-width="2"-->
+            <!--                        stroke-linecap="round"-->
+            <!--                        stroke-linejoin="round"-->
+            <!--                    />-->
+            <!--                </svg>-->
+            <!--                <svg-->
+            <!--                    width="22"-->
+            <!--                    height="22"-->
+            <!--                    viewBox="0 0 22 22"-->
+            <!--                    fill="none"-->
+            <!--                    xmlns="http://www.w3.org/2000/svg"-->
+            <!--                >-->
+            <!--                    <path-->
+            <!--                        d="M11 1L11 20.1667M11 20.1667L21 10.1667M11 20.1667L1 10.1667"-->
+            <!--                        stroke="white"-->
+            <!--                        stroke-width="2"-->
+            <!--                        stroke-linecap="round"-->
+            <!--                        stroke-linejoin="round"-->
+            <!--                    />-->
+            <!--                </svg>-->
+            <!--            </button>-->
         </div>
     </div>
     <div class="hero__car">
