--- a/src/scss/sections/_choose.scss
+++ b/src/scss/sections/_choose.scss
@@ -33,11 +33,20 @@
         content: '';
         position: absolute;
         z-index: 6;
-        top: -5.5rem;
+        top: -51rem;
         left: 0;
         width: 100%;
-        height: 13.5rem;
-        background: linear-gradient(0deg, rgb(25, 28, 32) 22%, rgba(255, 255, 255, 0) 99%);
+        height: 58.5rem;
+        background: linear-gradient(
+            179.97deg,
+            rgba(25, 28, 32, 0) 80.02%,
+            rgba(25, 28, 32, 0.632705) 91.71%,
+            rgba(25, 28, 32, 0.820708) 94.01%,
+            rgba(25, 28, 32, 0.924678) 96.23%,
+            rgba(25, 28, 32, 0.967385) 97.08%,
+            rgba(25, 28, 32, 0.98187) 99.04%,
+            #191c20 103.25%
+        );
         opacity: var(--groundOpacity);
 
         @media (max-width: 48em) {
@@ -96,7 +105,7 @@
 
     &__text {
         margin-bottom: 17.3rem;
-        max-width: 38rem;
+        max-width: 37rem;
         min-height: 8.5rem;
 
         @media (max-width: 48em) {
@@ -113,7 +122,7 @@
         align-self: center;
 
         @media (min-width: 48em) {
-            margin-bottom: 21rem;
+            margin-bottom: 17rem;
             align-self: flex-start;
         }
     }
@@ -481,13 +490,14 @@
     // .choose__characteristics-icon
 
     &__characteristics-icon {
-        flex: 0 0 9.7rem;
-        width: 9.7rem;
-        height: 9.7rem;
+        flex: 0 0 8.2rem;
+        width: 8.2rem;
+        height: 8.2rem;
 
         svg {
-            width: 3.5rem;
-            height: 3.5rem;
+            flex: 0 0 3.2rem;
+            width: 3.2rem;
+            height: 3.2rem;
 
             path {
                 transition: stroke 0.3s ease;
@@ -510,11 +520,12 @@
 
     &__btn {
         align-self: flex-end;
-        transform: translateY(-9rem);
+        transform: translateY(-7rem);
 
         @media (max-width: 48em) {
             align-self: stretch;
             width: 100%;
+            transform: none;
         }
     }
 
