--- a/src/scss/sections/header.scss
+++ b/src/scss/sections/header.scss
@@ -61,6 +61,7 @@
             grid-template-columns: 10.4rem 1fr 10.4rem;
 
             .icon {
+                flex: 0 0 10.4rem;
                 width: 10.4rem;
                 height: 10.4rem;
             }
@@ -166,6 +167,7 @@
 
         @media (max-width: 48em) {
             .icon svg {
+                flex: 0 0 3.2rem;
                 width: 3.2rem;
                 height: 3.2rem;
             }
@@ -185,6 +187,7 @@
                 display: none;
 
                 svg {
+                    flex: 0 0 3rem;
                     width: 3rem;
                     height: 3rem;
                 }
