--- a/src/scss/sections/modals.scss
+++ b/src/scss/sections/modals.scss
@@ -1,3 +1,21 @@
+body::after {
+    content: '';
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background: rgba(25, 28, 32, 0.6);
+    backdrop-filter: blur(0.6rem);
+    opacity: 0;
+    transition: opacity 0.8s ease 0s;
+    pointer-events: none;
+    z-index: 149;
+}
+.modal-show body::after {
+    opacity: 1;
+}
+
 .modal {
     position: fixed;
     top: 0;
@@ -7,6 +25,7 @@
     visibility: hidden;
     pointer-events: none;
     transition: visibility 0.8s ease 0s;
+    display: none;
     &.modal_show {
         z-index: 150;
         visibility: visible;
@@ -30,6 +49,9 @@
             display: none;
         }
     }
+    ._is-loaded & {
+        display: block;
+    }
 
     // .modal__wrapper
 
@@ -48,21 +70,33 @@
 
     &__content {
         position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         width: 100%;
-        height: 100%;
-        background-color: $bgColor;
         visibility: hidden;
         transform: scale(0);
         transition: transform 0.3s ease 0s;
         .lock & {
             visibility: visible;
         }
+
+        @media (max-width: 48em) {
+            height: 100%;
+            background-color: $bgColor;
+        }
     }
 
     // .modal__close
 
     &__close {
+        position: absolute;
+        top: 0;
+        right: 0;
+        transform: translate(50%, -50%);
+        z-index: 1;
         @media (max-width: 48em) {
+            position: static;
             margin-bottom: 6.4rem;
             align-self: flex-end;
 
@@ -81,6 +115,7 @@
     }
 
     &__body {
+        position: relative;
         display: flex;
         flex-direction: column;
     }
@@ -89,9 +124,15 @@
 // --------------------------------------------------------------------------
 
 .attractions-modal {
-    .modal__content {
-        @media (max-width: 48em) {
+    @media (max-width: 48em) {
+        .modal__inner,
+        .modal__body {
+            width: 100%;
+        }
+        .modal__content {
             padding: 3.2rem 2rem 16rem 2rem;
+            align-items: stretch;
+            width: 100vw;
 
             .routes__tabs-attractions-swiper figure {
                 height: 54rem;
@@ -142,6 +183,10 @@
                     height: 54rem;
                 }
             }
+        }
+
+        .modal__close {
+            transform: none;
         }
     }
 }
