--- a/src/ui/styles/_button.scss
+++ b/src/ui/styles/_button.scss
@@ -36,6 +36,19 @@
         transition: opacity 0.3s ease;
     }
 
+    &_ghost {
+        background: rgba(255, 255, 255, 0.01);
+        box-shadow:
+            inset 0 -0.16rem 0.81rem rgba(255, 168, 0, 0.48),
+            inset 0.32rem 0.32rem 0.16rem rgba(255, 255, 255, 0.1);
+        backdrop-filter: blur(0.4rem);
+        color: $orange;
+        &::before,
+        &::after {
+            content: none;
+        }
+    }
+
     &._is-disabled {
         &::before {
             background: radial-gradient(
