--- a/src/ui/styles/_icon.scss
+++ b/src/ui/styles/_icon.scss
@@ -40,6 +40,7 @@
         background-color: rgba(255, 108, 1, 0.4);
         opacity: 0;
         backdrop-filter: blur(0.8rem);
+        box-shadow: 0 0.45rem 0.76rem -0.3rem rgba(0, 0, 0, 0.25);
         transition: opacity 0.3s ease;
     }
 
@@ -91,6 +92,7 @@
     }
 
     svg {
+        flex: 0 0 2rem;
         width: 2rem;
         height: 2rem;
 
@@ -160,6 +162,7 @@
         }
 
         svg {
+            flex: 0 0 5rem;
             width: 5rem;
             height: 5rem;
         }
