feat: similar section

--- a/src/components/_similar-cars.html
+++ b/src/components/_similar-cars.html
@@ -67,6 +67,8 @@
                     </li>
                 </ul>
             </div>
+
+            <div class="similar__pagination sl-pagination sl-pagination_mm _mobile-only"></div>
         </div>
     </div>
 </section>
