--- a/src/scss/dev/ukik0.scss
+++ b/src/scss/dev/ukik0.scss
@@ -5,4 +5,4 @@
 @import '../sections/rental';
 @import '../sections/detailed';
 @import '../sections/detailed-menu';
-@import '../sections/similar';
+@import '../sections/similar-cars';
