--- a/src/scss/sections/_author.scss
+++ b/src/scss/sections/_author.scss
@@ -6,9 +6,9 @@
         justify-content: space-between;
         padding: 7rem 0;
 
-        @include small-tablet{
+        @include small-tablet {
             flex-direction: column-reverse;
-            padding-top: 15rem;
+            padding-top: 0;
             padding-bottom: 2rem;
         }
     }
@@ -21,7 +21,7 @@
         width: 64.4rem;
         height: 84.5rem;
 
-        @include small-tablet{
+        @include small-tablet {
             width: 60.4rem;
             height: 79.2rem;
             margin-left: 8rem;
@@ -42,7 +42,7 @@
         top: -6rem;
         left: 5.5rem;
 
-        @include small-tablet{
+        @include small-tablet {
             width: 65rem;
             top: 7rem;
             left: 11.5rem;
@@ -64,7 +64,7 @@
 
         margin-bottom: 6rem;
 
-        @include small-tablet{
+        @include small-tablet {
             gap: 3.2rem;
             margin-bottom: 6.4rem;
         }
@@ -76,7 +76,7 @@
         text-transform: uppercase;
         color: $gray;
 
-        @include small-tablet{
+        @include small-tablet {
             font-size: 3.2rem;
         }
     }
@@ -88,7 +88,7 @@
 
         margin-bottom: 13.3rem;
 
-        @include small-tablet{
+        @include small-tablet {
             flex-direction: column;
             gap: 2rem;
             margin-bottom: 0;
@@ -97,7 +97,7 @@
         li {
             max-width: 38rem;
 
-            @include small-tablet{
+            @include small-tablet {
                 max-width: 100%;
             }
         }
@@ -107,7 +107,7 @@
             line-height: 140%;
             color: $gray;
 
-            @include small-tablet{
+            @include small-tablet {
                 font-size: 3rem;
             }
 
@@ -120,7 +120,7 @@
         }
 
         &-btn {
-            @include small-tablet{
+            @include small-tablet {
                 margin-top: 6rem;
             }
         }
@@ -130,7 +130,7 @@
         width: 46rem;
         align-self: flex-end;
 
-        @include small-tablet{
+        @include small-tablet {
             display: none;
         }
     }
