--- a/src/scss/sections/_detailed.scss
+++ b/src/scss/sections/_detailed.scss
@@ -274,6 +274,7 @@
                     display: flex;
                     align-items: center;
                     justify-content: space-between;
+                    cursor: pointer;
 
                     @include small-tablet {
                         padding: 0 0 3.2rem;
@@ -418,6 +419,7 @@
                 0.3s background ease,
                 0.3s box-shadow ease;
             border-radius: 0.8rem;
+            cursor: pointer;
 
             @include small-tablet {
                 flex-shrink: 1;
@@ -433,9 +435,11 @@
             }
 
             @media (any-hover: hover) {
-                box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2);
-                background: linear-gradient(180deg, #ff6c01 0%, #b34f06 100%),
-                    radial-gradient(54% 100% at 49.96% 0%, rgb(255, 255, 255) 0%, rgb(0, 0, 0) 100%);
+                &:hover {
+                    box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2);
+                    background: linear-gradient(180deg, #ff6c01 0%, #b34f06 100%),
+                        radial-gradient(54% 100% at 49.96% 0%, rgb(255, 255, 255) 0%, rgb(0, 0, 0) 100%);
+                }
             }
         }
 
