--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -11,17 +11,23 @@
                 <nav class="footer__main-block">
                     <p>Меню</p>
                     <ul>
-                        <li><a href="/">Парк автомобилей</a></li>
-                        <li><a href="/">Условия</a></li>
-                        <li><a href="/">Акции</a></li>
-                        <li><a href="/">Контакты</a></li>
+                        <li><a href="/" class="footer__link link-w-hover">Парк автомобилей</a></li>
+                        <li><a href="/" class="footer__link link-w-hover">Условия</a></li>
+                        <li><a href="/" class="footer__link link-w-hover">Акции</a></li>
+                        <li><a href="/" class="footer__link link-w-hover">Контакты</a></li>
                     </ul>
                 </nav>
                 <div class="footer__main-block">
                     <p>Контакты</p>
                     <ul>
-                        <li><a href="mailto:prokat-light@bk.ru">prokat-light@bk.ru</a></li>
-                        <li><a href="tel:89248820330">+7 (924) 882-03-30</a></li>
+                        <li>
+                            <a href="mailto:prokat-light@bk.ru" class="footer__link link-w-hover"
+                                >prokat-light@bk.ru</a
+                            >
+                        </li>
+                        <li>
+                            <a href="tel:89248820330" class="footer__link link-w-hover">+7 (924) 882-03-30</a>
+                        </li>
                         <li>г. Южно-Сахалинск, ул Ленина 395А, офис 3</li>
                     </ul>
                 </div>
@@ -109,14 +115,10 @@
                         <a href="#"> Пользовательское соглашение </a>
                     </li>
                     <li>
-                        <a href="#">
-                            Политики обработки персональных данных
-                        </a>
+                        <a href="#"> Политики обработки персональных данных </a>
                     </li>
                     <li class="rd-logo">
-                        <a href="#">
-                            © 2016-2023 Права защищены
-                        </a>
+                        <a href="#"> © 2016-2023 Права защищены </a>
                     </li>
                 </ul>
             </div>
