--- a/src/components/header.html
+++ b/src/components/header.html
@@ -121,22 +121,22 @@
             </span>
         </button>
         <nav class="header__nav">
-            <a href="#" class="header__link txt">Парк автомобилей</a>
-            <a href="#" class="header__link txt">Условия</a>
-            <a href="#" class="header__link txt">Акции</a>
+            <a href="#" class="header__link txt link-w-hover">Парк автомобилей</a>
+            <a href="#" class="header__link txt link-w-hover">Условия</a>
+            <a href="#" class="header__link txt link-w-hover">Акции</a>
         </nav>
         <a href="#" class="header__logo"
             ><img src="./assets/images/logo.svg" alt="" class="header__logo"
         /></a>
         <div class="header__group">
-            <a href="#" class="header__link txt">Контакты</a>
+            <a href="#" class="header__link txt link-w-hover">Контакты</a>
             <div class="header__select-lang select-lang">
                 <select data-show-selection>
                     <option value="1" selected>ru</option>
                     <option value="2">eng</option>
                 </select>
             </div>
-            <a href="tel:74242490725" class="header__tel"
+            <a href="tel:74242490725" class="header__tel link-w-hover"
                 ><span class="_desktop-only">+7 (4242) 490-725</span
                 ><span class="header__tel-icon icon">
                     <svg
