--- a/src/ui/styles/ui.scss
+++ b/src/ui/styles/ui.scss
@@ -23,7 +23,7 @@
 @import './showmore';
 
 // news-card
-@import './news-card';
+@import 'news-card';
 
 // item card
 @import './item-card';
@@ -42,3 +42,6 @@
 
 // promotion btn
 @import './promotion-btn';
+
+// link with hover
+@import './link-w-hover';
