--- a/src/scss/sections/header.scss
+++ b/src/scss/sections/header.scss
@@ -106,45 +106,12 @@
         }
     }
 
-    // .header__link
-
-    .header__nav .header__link,
+    .select__value,
     &__tel {
-        position: relative;
-        transition: color 0.3s ease;
-
-        &::after {
-            content: '';
-            position: absolute;
-            top: calc(100% + 0.4rem);
-            left: 0;
-            width: 100%;
-            height: 0.2rem;
-            background-color: $white;
-            transform: scaleX(0);
-            transform-origin: center;
-            transition:
-                transform 0.3s ease,
-                background-color 0.3s ease;
-        }
-
-        &:active {
-            color: $orange;
-            &::after {
-                background-color: $orange;
-            }
-        }
-
-        @media (any-hover: hover) {
-            &:not(&._is-active) {
-                &:hover {
-                    &::after {
-                        transform: scaleX(1);
-                    }
-                }
-            }
-        }
+        @extend .link-w-hover;
     }
+
+    // .header__link
 
     &__link {
         font-weight: 500;
@@ -251,6 +218,12 @@
 
         &._is-selected {
             color: $orange;
+        }
+
+        @media (any-hover: hover) {
+            &:hover {
+                color: $orange;
+            }
         }
     }
 }
