--- a/src/scss/sections/modals.scss
+++ b/src/scss/sections/modals.scss
@@ -134,6 +134,10 @@ body::after {
             align-items: stretch;
             width: 100vw;
 
+            .swiper-slide {
+                min-height: 75rem;
+            }
+
             .routes__tabs-attractions-swiper figure {
                 height: 54rem;
             }
@@ -171,7 +175,7 @@ body::after {
                 flex-direction: column;
 
                 .routes__tabs-attractions-swiper-text {
-                    margin-bottom: 5rem;
+                    margin-bottom: auto;
                     display: block;
                     font-size: 15px;
                     line-height: 140%;
