fix: margin top on the detailed page; routes paths

--- a/src/scss/sections/_detailed.scss
+++ b/src/scss/sections/_detailed.scss
@@ -24,10 +24,10 @@
 }
 
 .detailed {
-    margin-top: 18rem;
+    padding-top: 18rem;
 
     @include small-tablet {
-        margin-top: 24rem;
+        padding-top: 24rem;
     }
 
     .swiper-slide {
