--- a/src/ui/styles/_promotion-btn.scss
+++ b/src/ui/styles/_promotion-btn.scss
@@ -30,6 +30,10 @@
         height: 13rem;
         pointer-events: none;
         transform: none;
+
+        ._menu-opened & {
+            display: none;
+        }
     }
 
     &__icon {
