--- a/src/scss/sections/_news.scss
+++ b/src/scss/sections/_news.scss
@@ -167,19 +167,24 @@
     }
 
     &__articles {
-        gap: 4.8rem;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 6rem 2rem;
         margin-bottom: 8rem;
-
-        @include desk {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 6rem 2rem;
-            margin-bottom: 6rem;
-        }
 
         @include small-tablet {
             display: flex;
             flex-direction: column;
+            gap: 4.8rem;
+        }
+
+        @include desk {
+            &.swiper-wrapper {
+                display: grid;
+                grid-template-columns: repeat(3, 1fr);
+                gap: 6rem 2rem;
+                margin-bottom: 6rem;
+            }
         }
 
         &-button {
